fix issue with header on mobile

--- a/dev-assets/css/3-layouts/_header.sass
+++ b/dev-assets/css/3-layouts/_header.sass
@@ -67,6 +67,15 @@ header
         padding: 20px 20px
 
 
-    @media(max-width: 415px)
+    @media(max-width: 600px)
       .logo
-        +size(50px)
+        width: 198px
+      
+    @media(max-width: 500px)
+      .logo
+        width: 98px
+      
+    @media(max-width: 400px)
+      .navbutton
+        a
+          padding: 20px 10px  
