--- a/dev-assets/css/main.css
+++ b/dev-assets/css/main.css
@@ -1150,16 +1150,21 @@ header ul.nav-list {
       header ul.nav-list a {
         font-size: 18px;
         padding: 20px 20px; } }
-  @media (max-width: 415px) {
+  @media (max-width: 600px) {
     header ul.nav-list .logo {
-      height: 50px;
-      width: 50px; } }
+      width: 198px; } }
+  @media (max-width: 500px) {
+    header ul.nav-list .logo {
+      width: 98px; } }
+  @media (max-width: 400px) {
+    header ul.nav-list .navbutton a {
+      padding: 20px 10px; } }
 
 .post-wrapper {
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-direction: row;
-      flex-direction: row;
+  -ms-flex-direction: column;
+      flex-direction: column;
   padding: 25px 10px; }
   .post-wrapper .post-body {
     display: -ms-flexbox;
@@ -1209,6 +1214,13 @@ header ul.nav-list {
 
 .post-date {
   margin-top: 0; }
+
+@media (min-width: 550px) {
+  .post-wrapper {
+    -ms-flex-direction: row;
+        flex-direction: row; }
+  .post-body {
+    padding: 0 20px; } }
 
 section.posts .posts-wrap {
   max-width: 600px;
